@@ -1,3 +1,8 @@
+2001-05-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c/shapefil.h/dbf_api.h: added support for NULL fields
+	in .dbf files. 
+
 2001-05-28  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c: add some checking on the record count to ensure it
